--- a/index.html
+++ b/index.html
@@ -171,6 +171,32 @@
         </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.1/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCJeLihLSDhdtP7oYdkffhW2GtCWChRLog",
+        authDomain: "fir-project-66397.firebaseapp.com",
+        projectId: "fir-project-66397",
+        storageBucket: "fir-project-66397.appspot.com",
+        messagingSenderId: "1075650924441",
+        appId: "1:1075650924441:web:9b5fee3e099815f5294d08",
+        measurementId: "G-QR9XXQSXDN"
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
     <script scr="script/auth.js"></script>
     <script scr="script/index.js"></script>
 </body>
